Project structure updates